--- a/customer/build.gradle
+++ b/customer/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.0'
+    id 'org.springframework.boot' version '2.7.2'
     id 'io.spring.dependency-management' version '1.1.4'
 }
 
@@ -8,7 +8,7 @@ group = 'learning.resilient'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = '11'
 }
 
 repositories {
@@ -16,23 +16,12 @@ repositories {
     maven { url 'https://repo.spring.io/milestone' }
 }
 
-ext {
-    set('springCloudVersion', "2023.0.0-RC1")
-}
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    // https://mvnrepository.com/artifact/io.github.resilience4j/resilience4j-spring-boot2
-    implementation 'io.github.resilience4j:resilience4j-spring-boot3'
-    // https://mvnrepository.com/artifact/io.github.resilience4j/resilience4j-circuitbreaker
-    // https://mvnrepository.com/artifact/io.github.resilience4j/resilience4j-bom
+    implementation 'io.github.resilience4j:resilience4j-spring-boot2'
     implementation 'io.github.resilience4j:resilience4j-feign'
-
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     annotationProcessor 'org.projectlombok:lombok'
-//	implementation 'javax.ws.rs:jsr311-api:1.1.1'
-    // https://mvnrepository.com/artifact/org.projectlombok/lombok
-    // https://mvnrepository.com/artifact/io.github.openfeign/feign-jackson
+    implementation 'commons-io:commons-io:2.6'
     implementation 'io.github.openfeign:feign-jackson:13.1'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     implementation 'io.github.openfeign:feign-jaxrs:13.1'
@@ -44,8 +33,7 @@ dependencies {
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-        mavenBom 'io.github.resilience4j:resilience4j-bom:2.0.0'
+        mavenBom 'io.github.resilience4j:resilience4j-bom:1.7.0'
     }
 }
 
