--- a/customer/build.gradle
+++ b/customer/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'io.github.resilience4j:resilience4j-spring-boot2'
     implementation 'io.github.resilience4j:resilience4j-feign'
+    implementation 'io.github.resilience4j:resilience4j-all'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'commons-io:commons-io:2.6'
     implementation 'io.github.openfeign:feign-jackson:13.1'
