--- a/customer/src/main/resources/application.yaml
+++ b/customer/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 server:
   port: 9080
-  tomcat:
-    max-threads: 4
-    min-spare-threads: 0
+#  tomcat:
+#    max-threads: 4
+#    min-spare-threads: 0
 
 management.endpoints.web.exposure.include: '*'
 management.endpoint.health.show-details: always
@@ -25,7 +25,7 @@ resilience4j.circuitbreaker:
   configs:
     default:
       registerHealthIndicator: true
-      slidingWindowSize: 20
+      slidingWindowSize: 5
       minimumNumberOfCalls: 5
       permittedNumberOfCallsInHalfOpenState: 5
       automaticTransitionFromOpenToHalfOpenEnabled: true
